# computer-use-perf

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  TASK.md  debug_canvas.py  debug_challenge.py  debug_llm.py  main.py  pyproject.toml  results.md
benchmarks/: __init__.py
docs/: agentlab-benchmarks.md  architecture-options.md  architecture.md  benchmark-results.md  challenge-map.md  failure-modes.md  journey.md  llm-resilience.md  observability.md  qwen3-prompting-guide.md  source-map.md  stage1-challenge-mode.md
scripts/: README.md  analyze_last_run.py  analyze_metrics.py  debug_actual_snapshot.py  debug_cdp_vs_js.py  debug_dom_silence.py  debug_drag_stale_coords.py  debug_drag_variants.py  debug_draw.py  debug_drop_zones.py  debug_enumerate_challenges.py  debug_final_step_fix.py  debug_full_challenge_map.py  debug_groq_tool_use.py  debug_hard_challenges.py  debug_hidden_dom.py  debug_history_processor.py  debug_hover.py  debug_memory.py  debug_mutation_element_ids.py  debug_mutation_feedback.py  debug_page_load_wait.py  debug_react_handler_fix.py  debug_react_handlers.py  debug_recursive_iframe.py  debug_recursive_iframe_fix.py  debug_recursive_iframe_oncomplete.py  debug_resilient.py  debug_scroll.py  debug_scroll_container_sample.py  debug_scroll_snapshot.py  debug_shadow_dom_challenge.py  debug_skip_challenge.py  debug_skip_to_29.py  debug_snapshot_handlers.py  debug_stale_puzzle_fix.py  debug_versions.py  debug_viewport_dpr.py  debug_wait.py  debug_watch_for_text.py  (+3 more)
tests/: test_agentlab_adapter.py  test_agents.py  test_browsergym_benchmark_runner.py  test_completion_inputs.py  test_completion_policy.py  test_external_browser_session.py  test_filter_and_abort.py  test_handlers.py  test_iframe_feedback.py  test_llm_client.py  test_metrics.py  test_pruning_guardrails.py  test_scroll_containers.py  test_semantic_resize.py  test_snapshot_ids.py  test_snapshot_ranking.py  test_stable_id_backend.py  test_stop_condition.py  test_tool_loop_guards.py  test_unified_mode.py
(+58 files in other folders)
