[project]
name = "computer-use-perf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "playwright>=1.44.0",
    "pydantic>=2.12.0",
    "pydantic-ai>=0.0.17",
    "openai>=1.70.0",
]

[project.optional-dependencies]
agentlab = [
    "agentlab>=0.4.2",
    "browsergym>=0.14.3",
    "browsergym-miniwob>=0.14.3",
    "browsergym-webarena>=0.14.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
