[project]
name = "zip"
version = "0.1.0"
description = "A lightweight, modular browser-use agent for LLM-driven web automation."
readme = "README.md"
requires-python = ">=3.12,<3.13"
keywords = [
    "agentlab",
    "browser-agent",
    "browser-automation",
    "browsergym",
    "llm-agents",
    "miniwob",
    "playwright",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "playwright>=1.44.0",
    "pydantic>=2.12.0",
    "pydantic-ai>=0.0.17",
    "openai>=1.70.0",
]

[project.optional-dependencies]
agentlab = [
    "agentlab>=0.4.2",
    "browsergym>=0.14.3",
    "browsergym-miniwob>=0.14.3",
    "browsergym-webarena>=0.14.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
